@@ -6,6 +6,9 @@ PHP                                                                        NEWS
   . Fixed bug #67308 (Serialize of DateTime truncates fractions of second).
     (Adam)
 
+- SPL:
+  . Fixed bug #67360 (Missing element after ArrayObject::getIterator). (Adam)
+
 ?? ??? 2014, PHP 5.4.29
 
 - COM:
